PAY-63 changes to json payment form library. backward compatibility for current inline form. update swagger spec
